ensure main/sub tabs align left

--- a/x-pack/legacy/plugins/ml/public/components/navigation_menu/_navigation_menu.scss
+++ b/x-pack/legacy/plugins/ml/public/components/navigation_menu/_navigation_menu.scss
@@ -1,5 +1,8 @@
 .mlNavigationMenu__tab {
   padding-bottom: 0;
+  padding-left: 0px;
+  padding-right: 0px;
+  margin-left: $euiSizeM;
 }
 
 .mlNavigationMenu__mainTab {
